[package]
name = "blessing-skin-status-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
sqlx = { version = "0.8.1", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hmac = "0.12"
sha1 = "0.10"
hex = "0.4"
percent-encoding = "2.3"